# polytope-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  work-item.yml
.github/workflows/: ci.yml
arch/x86_64/boot/: entry.S
arch/x86_64/kernel/: linker.ld
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: lib.rs
crates/axiomctl/: Cargo.toml
crates/axiomctl/src/: main.rs
crates/boot-contract/: Cargo.toml
crates/boot-contract/src/: lib.rs
crates/boot-elf/: Cargo.toml
crates/boot-elf/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: diagnostics.rs  lib.rs
crates/polyctl/: Cargo.toml
crates/polyctl/src/: main.rs
crates/uefi-loader/: Cargo.toml
crates/uefi-loader/src/: lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: image.rs  inspect.rs  lib.rs  main.rs  qemu.rs  repro.rs  temporary.rs
docs/: ENGINEERING_STANDARDS.md
docs/adr/: 0001-project-thesis-and-language-policy.md  0002-branching-and-release-model.md  0003-project-identity.md  0004-x86_64-boot-and-unsafe-boundaries.md
docs/boot/: DEPENDENCIES.md  DIAGNOSTICS.md  IMAGE_LAYOUT.md  README.md  SUPPORT_MATRIX.md
docs/security/: THREAT_MODEL.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/boot_contract/: malformed.txt
fuzz/corpus/kernel_elf/: malformed.txt
fuzz/fuzz_targets/: boot_contract.rs  kernel_elf.rs
scripts/: boot-check.sh  check.sh
