[package]
name = "polytope-boot-contract"
description = "Bounded loader-to-kernel boot ABI for PolytopeOS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[lints]
workspace = true
