[package]
name = "axiom-kernel"
description = "Architecture-independent AxiomOS kernel foundations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[lints]
workspace = true
