[package]
name = "polytope-kernel"
description = "Architecture-independent PolytopeOS kernel foundations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
boot-binary = []

[[bin]]
name = "polytope-kernel-x86_64"
path = "src/bin/x86_64.rs"
required-features = ["boot-binary"]

[dependencies]
polytope-arch-x86_64 = { path = "../arch-x86_64" }
polytope-boot-contract = { path = "../boot-contract" }

[lints]
workspace = true
