[package]
name = "polyctl"
description = "PolytopeOS developer control plane CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "polyctl"
path = "src/main.rs"

[lints]
workspace = true
