[package]
name = "xtask"
description = "Deterministic PolytopeOS build, image, and boot-test orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.98"
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
gpt = "4.1.0"
ovmf-prebuilt = "=0.2.8"
polytope-boot-elf = { path = "../boot-elf" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
uuid = "1.17.0"

[lints]
workspace = true
